NetBSD Problem Report #53000

From www@NetBSD.org  Fri Feb  9 21:41:20 2018
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 020DD7A195
	for <gnats-bugs@gnats.NetBSD.org>; Fri,  9 Feb 2018 21:41:20 +0000 (UTC)
Message-Id: <20180209214119.382EF7A261@mollari.NetBSD.org>
Date: Fri,  9 Feb 2018 21:41:19 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/luna68k/stand/boot/sc.c:411]: (warning) Redundant assignment of 'hd->scsi_ints' to itself.
X-Send-Pr-Version: www-1.0

>Number:         53000
>Category:       port-luna68k
>Synopsis:       src/sys/arch/luna68k/stand/boot/sc.c:411]: (warning) Redundant assignment of 'hd->scsi_ints' to itself.
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    port-luna68k-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Feb 09 21:45:00 +0000 2018
>Closed-Date:    Fri Feb 09 22:12:55 +0000 2018
>Last-Modified:  Fri Feb 09 22:12:55 +0000 2018
>Originator:     David BInderman
>Release:        cvs-20180209
>Organization:
>Environment:
>Description:
Source code is

   if (hd->scsi_ints != 0)
        hd->scsi_ints = hd->scsi_ints;

Suggest code rework.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Jonathan A. Kollasch" <jakllsch@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53000 CVS commit: src/sys/arch/luna68k/stand/boot
Date: Fri, 9 Feb 2018 22:08:28 +0000

 Module Name:	src
 Committed By:	jakllsch
 Date:		Fri Feb  9 22:08:28 UTC 2018

 Modified Files:
 	src/sys/arch/luna68k/stand/boot: sc.c

 Log Message:
 Explain what may seem to be a non-sensical assignment, but isn't.

 closes PR 53000


 To generate a diff of this commit:
 cvs rdiff -u -r1.16 -r1.17 src/sys/arch/luna68k/stand/boot/sc.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: jakllsch@NetBSD.org
State-Changed-When: Fri, 09 Feb 2018 22:12:55 +0000
State-Changed-Why:
Not, in fact, a bug.  The structure points to MMIO.  A comment has been added to explain this in the source code.
.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.