Explain what may seem to be a non-sensical assignment, but isn't.

closes PR 53000